Issue #129: Fixed the aligning of the hex and label cells

--- a/pcrs/resources/less/new-visualizer.less
+++ b/pcrs/resources/less/new-visualizer.less
@@ -192,6 +192,12 @@ table.memory-map-cell-table .address-heading {
     position: relative;
 }
 
+//.crouching-table
+.hidden-row {
+    visibility: hidden;
+    position: relative;
+}
+
 td.clear-cell {
     border-left: none;
     border-right: none;
@@ -220,6 +226,10 @@ div.memory-map-table-wrapper td.dot-line {
     line-height: 15px;
     height: 15px;
     margin-bottom: 1px;
+}
+
+div#stack-frame-tables table.memory-map-cell-table thead th {
+    border-bottom-width: 1px;
 }
 
 .highlight {
